--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ lazy_static = "1.4"
 tokio-tungstenite = "0.18"
 tokio = { version = "1.28", features = ["full"] }
 boolinator = "2.4"
+tracing = { version = "0.1" }
 
 [dev-dependencies]
 csv = "1.2"
