--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ tokio-tungstenite = "0.20"
 tokio = { version = "1", features = ["full"] }
 boolinator = "2.4"
 tracing = { version = "0.1" }
+serde_with = "3.4.0"
 
 [dev-dependencies]
 csv = "1.2"
