--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ all_apis = ["futures_api", "margin_api", "savings_api", "wallet_api"]
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 hex = "0.4"
-reqwest = { version = "0.11", features = ["json"], default-features = false }
+reqwest = { version = "0.11", features = ["json", "trust-dns"], default-features = false }
 ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -38,8 +38,8 @@ serde_repr = "0.1.12"
 thiserror = "1.0"
 url = "2.3"
 lazy_static = "1.4"
-tokio-tungstenite = "0.18"
-tokio = { version = "1.28", features = ["full"] }
+tokio-tungstenite = "0.20"
+tokio = { version = "1", features = ["full"] }
 boolinator = "2.4"
 tracing = { version = "0.1" }
 
