--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ all_apis = ["futures_api", "margin_api", "savings_api", "wallet_api"]
 chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
 hex = "0.4"
-reqwest = { version = "0.11", features = ["json", "trust-dns"], default-features = false }
+reqwest = { version = "0.11", features = ["json", "native-tls-alpn", "trust-dns"], default-features = false }
 ring = "0.16"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
